@@ -22,7 +22,7 @@
 		<picocli.version>4.6.2</picocli.version>
 		<jgrapht.version>1.5.1</jgrapht.version>
 		<jgraphx.version>4.2.2</jgraphx.version>
-		<infinispan.version>13.0.6.Final</infinispan.version>
+		<infinispan.version>13.0.10.Final</infinispan.version>
 		<junit.jupiter.version>5.3.1</junit.jupiter.version>
 		<mockito.version>2.23.0</mockito.version>
 		<maven.surefire.version>2.19.1</maven.surefire.version>
@@ -61,6 +61,11 @@
 			<version>${picocli.version}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.infinispan</groupId>
+			<artifactId>infinispan-core</artifactId>
+			<version>${infinispan.version}</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.apache.commons</groupId>
@@ -128,23 +133,30 @@
 			<version>${org.openjdk.jol.core.verion}</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.infinispan.protostream</groupId>
+			<artifactId>protostream-processor</artifactId>
+			<version>4.4.3.Final</version>
+
+			<scope>provided</scope>
+		</dependency>
+
 	</dependencies>
 
 	<dependencyManagement>
 		<dependencies>
-			<dependency>
-				<groupId>org.infinispan</groupId>
-				<artifactId>infinispan-bom</artifactId>
-				<version>${infinispan.version}</version>
-				<type>pom</type>
-				<scope>import</scope>
-			</dependency>
 			<dependency>
 				<groupId>org.jgrapht</groupId>
 				<artifactId>jgrapht</artifactId>
 				<version>${jgrapht.version}</version>
 				<type>pom</type>
 				<scope>import</scope>
+			</dependency>
+			<dependency>
+				<groupId>org.infinispan</groupId>
+				<artifactId>infinispan-bom</artifactId>
+				<version>${infinispan.version}</version>
+				<type>pom</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -164,16 +176,11 @@
 				<version>${compiler-plugin.version}</version>
 				<configuration>
 					<release>${java.version}</release>
-					<compilerArgs>--enable-preview</compilerArgs>
-
 				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>${maven.surefire.version}</version>
-				<configuration>
-					<argLine>--enable-preview</argLine>
-				</configuration>
 				<dependencies>
 					<dependency>
 						<groupId>org.junit.platform</groupId>
